fix z-index raster select boxes

--- a/src/components/SelectBoxSearch.css
+++ b/src/components/SelectBoxSearch.css
@@ -1,7 +1,7 @@
 
 .SelectChoice {
   position: relative;
-  z-index: 9999999;
+  /* z-index: 9999999; */
 }
 .Spinner {
   position: absolute;
@@ -13,6 +13,7 @@
   background-color: #fff;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 9px -1px;
+  z-index: 2;
 }
 .ResultRow {
   height: 50px;
