--- a/src/components/SelectBoxSimple.css
+++ b/src/components/SelectBoxSimple.css
@@ -1,13 +1,13 @@
 
 .SelectGeneralClass {
   position: relative;
-  z-index: 9999999;
 }
 .Results {
   position: absolute;
   background-color: #fff;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 9px -1px;
+  z-index: 2;
 }
 .ResultRow {
   height: 50px;
